--- a/src/app/components/inicio/educacion/educacion.component.html
+++ b/src/app/components/inicio/educacion/educacion.component.html
@@ -3,7 +3,10 @@
   <section class="edu seccion-clara d-flex align-items-center justify-content-center">
     <div class="container row d-flex flex-column align-items-center justify-content-center">
       <h2 class="sobre-mi-title">Educación</h2>
-      <p class="sobre-mi-description text-center" *ngIf="miPortfolio">{{educacionList.descripcion}}</p>
+      <div *ngFor="let descedu of miDescEdu">
+        <p class="sobre-mi-description text-center" *ngIf="miDescEdu">{{descedu.description}}</p>
+      </div>
+      
       <!-- A partir de aca, comienza cada institucion con sus cursos -->
       
       <!-- titulo -->
@@ -16,21 +19,22 @@
         <!-- Accordion Item -->
         
 
-        <div *ngFor="let certificado of certificadoList" class="certi-item">
-          <h3 class="certi-header" >
+        <div *ngFor="let edu of miPortfolio" class="certi-item">
+          <h3 class="certi-header">
             
-            {{certificado.institucion}}
+            {{edu.institucion}}
             
           </h3>
           <div class="certi-img">
             <div class="certi-body">
-              <a [href]="certificado.imagen" target="_blank">
-                <img class="certi-certificate" [src]="certificado.imagen" alt="">
+              <a [href]="edu.img_url" target="_blank">
+                <img class="certi-certificate" [src]="edu.img_url">
               </a>
-              <h4 class="inst-title"> {{certificado.tituloYtiempo}}</h4>
-              <p>{{certificado.descripcion}}</p>
+              <h4 class="inst-title"> {{edu.tituloYTiempo}}</h4>
+              <p>{{edu.description}}</p>
               
             </div>
+            
           </div>
         </div>
 
