--- a/src/app/components/user-interface/navbarmod/navbarmod.component.html
+++ b/src/app/components/user-interface/navbarmod/navbarmod.component.html
@@ -42,7 +42,7 @@
                     <a aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-check"></i>Presentacion</a>
                   </li>
                   <li>
-                    <a routerLink="/signUp" aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-arrow-right-to-bracket"></i>Cerrar sesion</a>
+                    <a routerLink="/inicio" aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-arrow-right-to-bracket"></i>Cerrar sesion</a>
                   </li>
                   
                 </ul>
